--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,24 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.similarcarlist {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.carcard {
+  flex-direction: column;
+  margin-right: 5%;
+  background-color: #d8d8d8;
+}
+
+.carcard h5 {
+  font-size: 20px;
+  margin: 0;
+}
+
+.carcard h6 {
+  font-size: 15px;
+  margin: 0;
 }
